{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 39,
  "lineage": "245d8bad-a20c-7196-cfc5-8cd3e12d8d87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:internet-gateway/igw-0385898e88d05a387",
            "id": "igw-0385898e88d05a387",
            "owner_id": "378896567556",
            "tags": {
              "Name": "Mumbai-vpc-IG"
            },
            "tags_all": {
              "Name": "Mumbai-vpc-IG"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-website-LB-terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:loadbalancer/app/card-website-LB-terraform-2/54b274f26cf69020",
            "arn_suffix": "app/card-website-LB-terraform-2/54b274f26cf69020",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-website-LB-terraform-2-1996912526.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:loadbalancer/app/card-website-LB-terraform-2/54b274f26cf69020",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-website-LB-terraform-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cde0c6a92347a921"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033431fd06fccd507"
              },
              {
                "subnet_id": "subnet-0faf97599f6c74919"
              }
            ],
            "subnets": [
              "subnet-033431fd06fccd507",
              "subnet-0faf97599f6c74919"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.subnet_1a_public",
            "aws_subnet.subnet_1b_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-website-listener-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:listener/app/card-website-LB-terraform-2/54b274f26cf69020/7eb9f9149f963ec2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:targetgroup/card-website-TG-terraform-2/cd94a5507eb05d05",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:listener/app/card-website-LB-terraform-2/54b274f26cf69020/7eb9f9149f963ec2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:loadbalancer/app/card-website-LB-terraform-2/54b274f26cf69020",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-website-LB-terraform-2",
            "aws_lb_target_group.card-website-TG-terraform-2",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.subnet_1a_public",
            "aws_subnet.subnet_1b_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-website-TG-terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:targetgroup/card-website-TG-terraform-2/cd94a5507eb05d05",
            "arn_suffix": "targetgroup/card-website-TG-terraform-2/cd94a5507eb05d05",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378896567556:targetgroup/card-website-TG-terraform-2/cd94a5507eb05d05",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-TG-terraform-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai_RT_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:route-table/rtb-044addd2d53d2531a",
            "id": "rtb-044addd2d53d2531a",
            "owner_id": "378896567556",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mumbai-RT-Private"
            },
            "tags_all": {
              "Name": "mumbai-RT-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai_RT_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:route-table/rtb-0e1b7075c43d4eebb",
            "id": "rtb-0e1b7075c43d4eebb",
            "owner_id": "378896567556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0385898e88d05a387",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-RT-Public"
            },
            "tags_all": {
              "Name": "mumbai-RT-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaa759431ef3d775",
            "route_table_id": "rtb-044addd2d53d2531a",
            "subnet_id": "subnet-081d0d95bfb53c79c"
          },
          "dependencies": [
            "aws_route_table.mumbai_RT_Private",
            "aws_subnet.subnet_1a_private",
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0162a0d5547cb9b",
            "route_table_id": "rtb-0e1b7075c43d4eebb",
            "subnet_id": "subnet-0faf97599f6c74919"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mumbai_RT_Public",
            "aws_subnet.subnet_1a_public",
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e459139e6cb969ad",
            "route_table_id": "rtb-044addd2d53d2531a",
            "subnet_id": "subnet-073034934a7ad2b8a"
          },
          "dependencies": [
            "aws_route_table.mumbai_RT_Private",
            "aws_subnet.subnet_1b_private",
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a67d7ca51f803ee",
            "route_table_id": "rtb-0e1b7075c43d4eebb",
            "subnet_id": "subnet-033431fd06fccd507"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mumbai_RT_Public",
            "aws_subnet.subnet_1b_public",
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:security-group/sg-0cde0c6a92347a921",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cde0c6a92347a921",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "378896567556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:subnet/subnet-081d0d95bfb53c79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d0d95bfb53c79c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378896567556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1a_private"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1a_private"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:subnet/subnet-0faf97599f6c74919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faf97599f6c74919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378896567556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1a_public"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1a_public"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:subnet/subnet-073034934a7ad2b8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073034934a7ad2b8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378896567556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1b_private"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1b_private"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:subnet/subnet-033431fd06fccd507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033431fd06fccd507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378896567556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1b_public"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1b_public"
            },
            "vpc_id": "vpc-0cf55106c1a361fc4"
          },
          "dependencies": [
            "aws_vpc.project_vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378896567556:vpc/vpc-0cf55106c1a361fc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e9c75b7563827587",
            "default_route_table_id": "rtb-0e632c0432689c729",
            "default_security_group_id": "sg-00049605eb4824a53",
            "dhcp_options_id": "dopt-0e0ffca628c6d9ff0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf55106c1a361fc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e632c0432689c729",
            "owner_id": "378896567556",
            "tags": {
              "Name": "project_vpc_mumbai"
            },
            "tags_all": {
              "Name": "project_vpc_mumbai"
            }
          }
        }
      ]
    }
  ]
}